--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,27 +38,36 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install cargo-hack
-        uses: taiki-e/install-action@cargo-hack
+      - name: Install 1.16 toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: 1.16
+          profile: minimal
+          override: true
 
-      - name: Check all versions
+      - name: Check
         uses: actions-rs/cargo@v1
         with:
-          command: hack
-          args: --version-range 1.0..1.35 check
+          command: check
 
   # Versions afterr Unpin; check tests which statically check Unpin OIBIT
   msrv-high:
     runs-on: ubuntu-latest
+    env:
+      TRYBUILD: overwrite
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install cargo-hack
-        uses: taiki-e/install-action@cargo-hack
+      - name: Install 1.36 toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: 1.36
+          profile: minimal
+          override: true
 
-      - name: Check all versions
+      - name: Run tests
         uses: actions-rs/cargo@v1
         with:
-          command: hack
-          args: --version-range 1.36.. check --all-targets
+          command: test
+          args: --all-features --all-targets --no-fail-fast
