--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,11 +12,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install nightly toolchain
-        uses: dtolnay/rust-toolchain@nightly
+      - name: Install stable toolchain
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Run tests
-        run: cargo test --all-features --all-targets --no-fail-fast
+        run: cargo test --all-features --no-fail-fast
 
   msrv:
     runs-on: ubuntu-latest
@@ -24,8 +24,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install 1.55 toolchain
-        uses: dtolnay/rust-toolchain@1.55
+      - name: Install 1.56 toolchain
+        uses: dtolnay/rust-toolchain@1.56
 
-      - name: Run tests
-        run: cargo test --all-features --all-targets --no-fail-fast
+      - name: Check tests
+        run: cargo test --all-features --no-run
